--- a/ahorcado.ipynb
+++ b/ahorcado.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "b7b8d8c9",
    "metadata": {},
    "outputs": [
@@ -46,16 +46,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bienvenide al ahorcado\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Zara, adivina la palabra de 4 letras: _ _ _ _\n",
-      "has acertado la palabra secreta era: roma\n",
-      "María gana la partida\n"
+      "Bienvenide al ahorcado\n",
+      "Miriam, adivina la palabra de 4 letras: _ _ _ _\n",
+      "mal, intentalo de nuevo, tienes: 5 intentos restantes\n",
+      "mal, intentalo de nuevo, tienes: 4 intentos restantes\n",
+      "mal, intentalo de nuevo, tienes: 3 intentos restantes\n",
+      "_ o _ _\n",
+      "mal, intentalo de nuevo, tienes: 2 intentos restantes\n",
+      "mal, intentalo de nuevo, tienes: 1 intentos restantes\n",
+      "oh no! has muerto, Ana gana la partida\n"
      ]
     }
    ],
@@ -74,33 +73,47 @@
     "intentos = 6\n",
     "# cada vez que letra_adivinar != letras_palabra entonces intentos -= 1 y cuando intentos == 0 pierde el jugador_adivinador\n",
     "\n",
-    "\n",
-    "while intentos != 1:\n",
+    "while intentos != 0:\n",
     "    letra_adivinar = input('introduce una letra o la palabra secreta').lower()\n",
     "    if letra_adivinar == palabra_secreta:\n",
     "        print(f'has acertado la palabra secreta era: {palabra_secreta}')\n",
+    "        print(f'{jugador_adivinador} gana la partida')\n",
     "        break\n",
     "    elif letra_adivinar in palabra_secreta:\n",
     "        palabra_oculta[palabra_secreta.index(letra_adivinar)] = letra_adivinar\n",
     "        print(' '.join(palabra_oculta))\n",
-    "        \n",
     "        continue\n",
-    "        \n",
     "        #for letra_adivinar in palabra_secreta:\n",
-    "\n",
-    "        \n",
-    "    else: \n",
+    "    elif intentos == 1:\n",
+    "        print(f'oh no! has muerto, {jugador_palabra_secreta} gana la partida')\n",
+    "        break\n",
+    "    else:\n",
     "        intentos -= 1\n",
-    "        \n",
-    "        print(f'mal, intentalo de nuevo, tienes: {intentos} intentos restantes')\n",
-    "            \n",
-    "        \n",
-    "print(f'{jugador_palabra_secreta} gana la partida')\n",
-    "\n",
-    "   # reemplazaar el guion por la letra adivinada\n",
-    "   \n",
-    "   # una vez tengas la palabra clara poder introducirla entera\n",
-    "\n"
+    "        print(f'mal, intentalo de nuevo, tienes: {intentos} intentos restantes')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ab444f13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src='10.jpg' width='300'>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import display, HTML\n",
+    "display(HTML(\"<img src='10.jpg' width='300'>\"))\n"
    ]
   },
   {
