--- a/piedrapapeltijera_ana.ipynb
+++ b/piedrapapeltijera_ana.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "89d0cc0d",
    "metadata": {},
    "outputs": [
@@ -53,14 +53,14 @@
    ],
    "source": [
     "import random\n",
-    "options = ['Rock','Paper','Scissor']\n",
-    "print(\"Welcome to Rock-Paper-Scissor's Game!\")\n",
+    "options = ['Rock','Paper','Scissors']\n",
+    "print(\"Welcome to Rock-Paper-Scissors Game!\")\n",
     "points_player_human = 0\n",
     "points_player_computer = 0\n",
     "\n",
     "\n",
     "while (points_player_human != 3) and (points_player_computer != 3):\n",
-    "        print(\"Write an option: Rock, Paper or Scissor:\")\n",
+    "        print(\"Write an option: Rock, Paper or Scissors:\")\n",
     "        \n",
     "        player_human = input(\"Type Player 1 option:\").capitalize()\n",
     "        print(\"player human option: \", player_human)\n",
@@ -77,14 +77,14 @@
     "            continue\n",
     "\n",
     "        if player_human == \"Rock\":\n",
-    "            if player_computer == \"Scissor\":\n",
+    "            if player_computer == \"Scissors\":\n",
     "                print(\"Player Human Won!\")\n",
     "                points_player_human = points_player_human+1\n",
     "            else:\n",
     "                print(\"Player Computer Won!\")\n",
     "                points_player_computer = points_player_computer+1\n",
     "\n",
-    "        if player_human == \"Scissor\": \n",
+    "        if player_human == \"Scissors\": \n",
     "            if player_computer == \"Paper\":\n",
     "                print(\"Player Human Won!\")\n",
     "                points_player_human = points_player_human+1\n",
